--- a/Onboarding/templates/contacts.html
+++ b/Onboarding/templates/contacts.html
@@ -102,9 +102,9 @@
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:openhandhealthcare@gmail.com">info@mmtsofmd.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>EMERGENCY CALL<br><a href="{% url 'Onboarding:home' %}">410-304-7574
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
 
           </a></h3>
         </div>
@@ -206,10 +206,10 @@
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
-    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2  sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">606 Edmonson Rd, 200-201 Catonsville, MD 21228
+    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2  sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">606 Edmondson Ave Suite 200
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <a href="mailto:info@mmtsofmd.com" class="mt-2 text-sm text-gray-200">info@mmtsofmd.com</a>
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
     </span>
   </div>
 </footer>
