--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -102,9 +102,9 @@
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:openhandhealthcare@gmail.com">info@mmtsofmd.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>EMERGENCY CALL<br><a href="{% url 'Onboarding:home' %}">410-304-7574
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
 
           </a></h3>
         </div>
@@ -145,10 +145,16 @@
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex bg-green-700 md:flex-row flex-col justify-center items-center py-10 align-middle">
                 <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
                   <h1 class=" text-green-500 mb-1 font-bold lg:text-3xl md:text-2xl text-2xl">
-                    Psychiatric Rehabilitation Program (PRP)</h1>
-                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">PRP services are provided through individual counseling and group activities. Recovery groups focus on helping members learn essential life skills for independent living and fulfilling meaningful life roles.
-
-                    Rehabilitation counselors provide community outreach services to assist members living in the larger community.</p>
+                    Partial Hospitalization Program (PHP)-Level II</h1>
+                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">
+                    This is an orientation and stabilization phase for clients starting ‘Substance Use
+                    Disorder’ care at Meaningful Minds. Clients receive education and information regarding
+                    symptoms, effects, and treatment of mental illness, medications, substance abuse, co-
+                    dependency and its effect on substance abuse treatment, the implementation of self-
+                    care. Services provide individual and group substance abuse counseling, education on
+                    the health consequences of substance abuse and dependence, and relapse prevention.
+                    PHP’s typically run approximately 6 hours a day, five days a week.
+                  </p>
                 </div>
                 <div class="feature-item-img mt-8">
                     <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18593.jpg' %}" alt="">
@@ -157,8 +163,14 @@
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12">
                 <div class="feature-item-text md:text-left text-center sm:ml-[20px]  md:w-[750px]">
                   <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
-                    Intensive Outpatient (IOP)</h1>
-                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px] ">Our Intensive Outpatient Program (also known as IOP) is designed to provide you with the support you need as you begin steps towards independence. Whether you are stepping down your treatment or entering IOP as your initial step, our team will create an individualized plan based around your needs during early recovery.</p>
+                    Intensive Outpatient (IOP)-Level 2.1</h1>
+                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px] ">
+                    Our Intensive Outpatient Program (also known as IOP) is designed to provide you with
+the support you need as you begin steps towards independence. Whether you are
+stepping down from your treatment or entering IOP as your initial step, our team will
+create an individualized plan based around your needs during early recovery. IOP’s
+typically run approximately 3-6 hours each day for one to three days a week.
+                  </p>
                 </div>
                 <div class="feature-item-img">
                     <img class="w-[500px] rounded-[20px]" src="{% static 'images/18366.jpg' %}" alt="">
@@ -167,8 +179,20 @@
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
                 <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
                   <h1 class="pb-1 text-green-500 font-bold lg:text-3xl md:text-2xl text-2xl">
-                    Outpatient Program (OP)</h1>
-                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">Outpatient therapy (also known as OP) is the least intensive program we offer.  The outpatient treatment program provides regularly scheduled individual and group counseling. The program includes education on mental health issues, recovery and wellness. These comprehensive, coordinated, and defined services vary in the level of intensity dependent on the individual needs of the client seeking services. The outpatient program addresses a variety of needs, including, but not limited to, situational stressors, family relations, interpersonal relations, mental health issues, life span issues, psychiatric illnesses, addictions, and other traumas.</p>
+                    Outpatient Program (OP)-Level I
+                  
+                  </h1>
+                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">Outpatient therapy (also known as OP) is the least intensive program we offer. The
+                    outpatient treatment program provides regularly scheduled individual and group
+                    counseling. The program includes education on mental health issues, recovery and
+                    wellness. These comprehensive, coordinated, and defined services vary in the level of
+                    intensity dependent on the individual needs of the client seeking services. The
+                    outpatient program addresses a variety of needs, including, but not limited to, situational
+                    stressors, family relations, interpersonal relations, mental health issues, life span
+                    issues, psychiatric illnesses, addictions, and other traumas. OP’s typically run 3-4 hours
+                    a day, one to three days a week.
+                   
+                  </p>
                 </div>
                 <div class="feature-item-img">
                     <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18506.jpg' %}" alt="">
@@ -178,8 +202,16 @@
                 <div class="feature-item-text md:text-left text-center sm:ml-[20px]  md:w-[750px]">
                   <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
                     
-          Partial Hospitalization Program (PHP)</h1>
-                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px]">This is an orientation and stabilization phase for clients starting care at Meaningful Minds. Clients receive education and information regarding symptoms, effects, and treatment of mental illness, medications, substance abuse, co-dependency and its effect on substance abuse treatment, the implementation of self-care. Services provide individual and group substance abuse counseling, education on the health consequences of substance abuse and dependence, and relapse prevention. </p>
+                    Psychiatric Rehabilitation Program-Adults</h1>
+                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px]">Psychiatric rehabilitation for adults is a comprehensive approach to helping individuals
+                    with mental illness to achieve their goals and lead fulfilling lives. The aim of psychiatric
+                    rehabilitation is to help individuals with mental illness to develop skills and strategies for
+                    managing their symptoms, improving their quality of life, and achieving their personal
+                    goals.
+                    Psychiatric rehabilitation programs typically involve a range of services, including, social
+                    support, vocational training, resource linkage, skill building, and educational programs.
+                    The focus is on helping individuals to build a support system, develop coping strategies,
+                    and learn new skills that will enable them to function more effectively in their daily lives.</p>
                 </div>
                 <div class="feature-item-img">
                     <img class="w-[500px] rounded-[20px]" src="{% static 'images/18557.jpg' %}" alt="">
@@ -217,10 +249,10 @@
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
-    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmonson Rd, 200-201 Catonsville, MD 21228
+    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <a href="mailto:info@mmtsofmd.com" class="mt-2 text-sm text-gray-200">info@mmtsofmd.com</a>
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
     </span>
   </div>
 </footer>
