--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -102,9 +102,9 @@
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:openhandhealthcare@gmail.com">info@mmtsofmd.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>EMERGENCY CALL<br><a href="{% url 'Onboarding:home' %}">410-304-7574
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
 
           </a></h3>
         </div>
@@ -142,7 +142,26 @@
             <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
               <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                   <h2 class="uppercase font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
-                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Our practice specializes in helping people who are struggling with addiction, social and life skills, or behavior management. If you are trying to navigate these areas of life, we’re confident that we have the experience to help you rediscover what brings happiness to your life. Through therapy, there is always a way to address the issues you face and learn coping strategies to help you both right now and in the future. Through therapy, we can get you on track to leading a happier, more fulfilling life by equipping you with the tools you need to more efficiently and confidently manage life’s challenges. It is never too late to start living the life you’ve always wanted. If you’re interested in becoming a better, happier, more fulfilled you, get started by reaching out today!<br> <br></P>
+                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Meaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
+                    Jahneen had a vision to provide services to the community that speaks to the heart of
+                    the people, not the cookie-cutter same way of doing things. She has over 15 years of
+                    experience as a help agent serving our most vulnerable population that includes but not
+                    limited to the elderly, children and family, single mothers and fathers, LGBTQ+ and our
+                    returning citizens to society. Jahneen sees every individual as a human being and that
+                    is the foundation of Meaningful Minds. Everyone deserves to be treated with dignity
+                    and respect. You will always hear Jahneen say “put desire above fear”. She believes, “if
+                    your desire to live better is stronger than your fear, it can and will happen”.
+                    <br>
+                    Our practice specializes in helping people who are struggling with addiction, social and
+                    life skills, or behavior management. If you are trying to navigate these areas of life,
+                    we’re confident that we have the experience to help you rediscover what brings
+                    happiness to your life. Through our treatment services, there is always a way to address
+                    the issues you face and learn coping strategies to help you both right now and in the
+                    future. Our holistic approach will help get you on track to leading a happier, more
+                    fulfilling life by equipping you with the tools you need to more efficiently and confidently
+                    manage life’s challenges. It is never too late to start living the life you’ve always wanted.
+                    Our goal is to take you from “healing to wholeness”. If you’re interested in becoming a
+                    better, happier, more fulfilled you, get started by reaching out today!<br> <br></P>
                   <h1 class="text-black text-2xs  pb-1 ">- Jahneen Keatz Onyemachi , FOUNDER / CEO</h1>
                   
               </div>
@@ -180,10 +199,10 @@
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
-    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2  sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">606 Edmonson Rd, 200-201 Catonsville, MD 21228
+    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2  sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <a href="mailto:info@mmtsofmd.com" class="mt-2 text-sm text-gray-200">info@mmtsofmd.com</a>
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
     </span>
   </div>
 </footer>
